--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -199,9 +199,17 @@
             </div>
             {% if current_user.role in ['director', 'manager'] %}
             <div class="nav-item">
-                <a href="{{ url_for('performance.performance_review') }}" class="nav-link {% if 'performance' in request.endpoint %}active{% endif %}">
-                    <i class="bi bi-star-fill"></i>
-                    <span>Đánh Giá Hiệu Suất</span>
+                <a href="{{ url_for('performance.performance_review') }}"
+                   class="nav-link {% if request.endpoint == 'performance.performance_review' %}active{% endif %}">
+                    <i class="bi bi-graph-up-arrow"></i>
+                    <span>Hiệu Suất Nhân Viên</span>
+                </a>
+            </div>
+            <div class="nav-item">
+                <a href="{{ url_for('performance.unrated_tasks') }}"
+                   class="nav-link {% if request.endpoint == 'performance.unrated_tasks' %}active{% endif %}">
+                    <i class="bi bi-hourglass-split"></i>
+                    <span>NVụ Chưa Đ.Giá</span>
                 </a>
             </div>
             {% endif %}
